bases/apps/psuite/psuite-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psuite
  labels:
    app: psuite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psuite
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: psuite
    spec:
      hostname: psuite
      serviceAccountName: psuite
      containers:
      - name: psuite
        image: linuxserver/syncthing:1.22.2
        volumeMounts:
        - name: data
          mountPath: /data
        - name: config
          mountPath: /config
        livenessProbe:
          httpGet:
            path: /rest/noauth/health
            port: 8384
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /rest/noauth/health
            port: 8384
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: scripts
        configMap:
          name: psuite-scripts
      - name: data
        persistentVolumeClaim:
          claimName: psuite-data
      - name: config
        persistentVolumeClaim:
          claimName: psuite-config
