bases/apps/psuite/psuite-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: psuite
  labels:
    app: psuite
spec:
  type: LoadBalancer
  ports:
  - port: 8384
    targetPort: 8384
    protocol: TCP
    name: gui
  selector:
    app: psuite
---
apiVersion: v1
kind: Service
metadata:
  name: psuite-sync-tcp
  labels:
    app: psuite
spec:
  type: LoadBalancer
  ports:
  - port: 22000
    targetPort: 22000
    protocol: TCP
    name: file-transfer
  selector:
    app: psuite
---
apiVersion: v1
kind: Service
metadata:
  name: psuite-sync-udp
  labels:
    app: psuite
spec:
  type: LoadBalancer
  ports:
  - port: 22000
    targetPort: 22000
    protocol: UDP
    name: file-transfer-quic
  selector:
    app: psuite
---
apiVersion: v1
kind: Service
metadata:
  name: psuite-discovery
  labels:
    app: psuite
spec:
  type: LoadBalancer
  ports:
  - port: 21027
    targetPort: 21027
    protocol: UDP
    name: discovery
  selector:
    app: psuite
